# eden

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  code.eden  version.cmake
CMakeModules/: GetVersion.cmake
docs/: bifs.md  datatypes.md  nifs.md  packformat.md  registers.md
src/: CMakeLists.txt  bif.c  builtin_test_pack.c  builtin_test_pack.cc  builtin_test_pack.h  builtin_test_pack.hh  eden.h  error.c  main.c  main.cc  op.c  pack.c  vm.c
src/libceden/: bif.c  eden.h  op.c  ref.h  term.c
src/libeden/: CMakeLists.txt  bc.cc  bc.hh  bccheck.cc  bif.cc  builtin_test_pack.cc  defines.hh  eden.hh  err.cc  nif.cc  pack.cc  pack.hh  term.cc  term.hh  types.hh  version.hh.in  vm.cc
src/libeden_bifs/: CMakeLists.txt  arith.cc  arith.hh  dbg.cc  dbg.hh  edn_bifs.cc  edn_bifs.hh  pack.cc  pack.hh  rt.cc  rt.hh  term.cc  term.hh
src/libeden_niftest/: CMakeLists.txt  eden_niftest.cc
src/libedenasm/: CMakeLists.txt  asm.cc  asm.hh
src/libedenvm/: CMakeLists.txt  nif.cc  nif.hh  proc.hh  sched.cc  sched.hh  vm.cc  vm.hh
